RESOLVED FIXED314928
Safari can hang under RemoteScrollingCoordinatorProxyMac::displayDidRefresh() sometimes
https://bugs.webkit.org/show_bug.cgi?id=314928
Summary Safari can hang under RemoteScrollingCoordinatorProxyMac::displayDidRefresh()...
Simon Fraser (smfr)
Reported 2026-05-15 18:49:47 PDT
RemoteScrollingCoordinatorProxyMac::displayDidRefresh() can cause the main thread to hang, especially with threaded animations enabled.
Attachments
Simon Fraser (smfr)
Comment 1 2026-05-15 18:50:01 PDT
Simon Fraser (smfr)
Comment 2 2026-05-15 19:02:04 PDT
EWS
Comment 3 2026-05-16 08:33:39 PDT
Committed 313360@main (31492bb45dd5): <https://commits.webkit.org/313360@main> Reviewed commits have been landed. Closing PR #65027 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.